--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,49 +9,57 @@
     <link href="assets/css/style.css" rel="stylesheet">
 
 </head>
+
 <body>
     <table>
         <caption>Mon compte bancaire</caption>
-        <tr>
-            <th>Date</th>
-            <th>Libellé</th>
-            <th>Crédit</th>
-            <th>Débit</th>
-        </tr>
-        <tr>
-            <td>01/05/2021</td>
-            <td>Paye</td>
-            <td>1500 €</td>
-            <td>0 €</td>
-        </tr>
-        <tr>
-            <td>01/05/2021</td>
-            <td>Courses de la semaine</td>
-            <td>0 €</td>
-            <td>152,30 €</td>
-        </tr>
-        <tr>
-            <td>04/05/2021</td>
-            <td>McDo</td>
-            <td>0 €</td>
-            <td>32,40 €</td>
-        </tr>
-        <tr>
-            <td>05/05/2021</td>
-            <td>Loyer</td>
-            <td>0 €</td>
-            <td>700 €</td>
-        </tr>
-        <tr>
-            <td>05/05/2021</td>
-            <td>Internet</td>
-            <td>0 €</td>
-            <td>39,90 €</td>
-        </tr>
-        <tr>
-            <td colspan="2">Solde</td>
-            <td colspan="2">575,40 €</td>
-        </tr>
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Libellé</th>
+                <th>Crédit</th>
+                <th>Débit</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>01/05/2021</td>
+                <td>Paye</td>
+                <td>1500 €</td>
+                <td>0 €</td>
+            </tr>
+            <tr>
+                <td>01/05/2021</td>
+                <td>Courses de la semaine</td>
+                <td>0 €</td>
+                <td>152,30 €</td>
+            </tr>
+            <tr>
+                <td>04/05/2021</td>
+                <td>McDo</td>
+                <td>0 €</td>
+                <td>32,40 €</td>
+            </tr>
+            <tr>
+                <td>05/05/2021</td>
+                <td>Loyer</td>
+                <td>0 €</td>
+                <td>700 €</td>
+            </tr>
+            <tr>
+                <td>05/05/2021</td>
+                <td>Internet</td>
+                <td>0 €</td>
+                <td>39,90 €</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="2">Solde</td>
+                <td colspan="2">575,40 €</td>
+            </tr>
+        </tfoot>
     </table>
 </body>
+
 </html>
